<resources>
    <string name="app_name">Droid Caffe</string>
    <string name="tab_label_1">Desserts</string>
    <string name="tab_label_2">Pastries</string>
    <string name="tab_label_3">Stores</string>
    <string name="dessert_recipes">Dessert recipes</string>
    <string name="pastries_frag">Pastries frag</string>
    <string name="stores_frag">Stores frag</string>
    <string name="browse_recipes">Browse recipes</string>
    <string name="recipe_title">Recipe title</string>
    <string name="prep_cook_time"><![CDATA[Prep & cook time: 2hrs]]></string>
    <string name="recipe_short_description">Recipe short description</string>
    <string name="how_to_prepare_balut">How to prepare Balut</string>
    <string name="a_picture_of_balut">A picture of balut</string>
    <string name="recipe_avatar">recipe avatar</string>
    <string name="pizzas">Pizzas</string>
    <string name="cocktails">Cocktails</string>
    <string name="pasta">Pasta</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="share_app">Share app</string>
    <string name="user_name_text">Joan\'s Droid Caffe</string>
    <string name="email_address_text">jowambui123@gmail.com</string>
    <string name="pastries_recipe">Pastries Recipes</string>
    <string name="droid_cafe_stores">Droid Cafe Stores</string>
    <string name="rate_or_stores">Rate or stores</string>
    <string name="news">News</string>
    <string name="open_daily_from_7_00_a_m">Open daily from 7:00 a.m</string>
    <string name="like">LIKE</string>
    <string name="comment">COMMENT</string>
    <string name="share">SHARE</string>
    <string name="store_name_text">Store name</string>
    <string name="foods">Foods</string>
    <string name="communication">Communication</string>
    <string name="pizza_recipes">Pizza Recipes</string>
    <string name="cocktails_recipes">Cocktails Recipes</string>
    <string name="pasta_recipes">Pasta Recipes</string>
    <string-array name="desserts_titles">
        <item>Tiramisu</item>
        <item>White chocolate parfait flambeed</item>
        <item>Halo halo</item>
        <item>Tiramisu</item>
        <item>White chocolate parfait flambeed</item>
        <item>Halo halo</item>
        <item>Tiramisu</item>
        <item>White chocolate parfait flambeed</item>
        <item>Halo halo</item>
    </string-array>
    <string-array name="desserts_descriptions">
        <item>Tiramisu looks chocolatey with strawberry and some weird berries on top</item>
        <item>White chocolate with embedded rasp berries and sweet herbs</item>
        <item>Halo halo is a creepy mixture of fruits and berries</item>
        <item>Tiramisu looks chocolatey with strawberry and some weird berries on top</item>
        <item>White chocolate with embedded rasp berries and sweet herbs</item>
        <item>Halo halo is a creepy mixture of fruits and berries</item>
        <item>Tiramisu looks chocolatey with strawberry and some weird berries on top</item>
        <item>White chocolate with embedded rasp berries and sweet herbs</item>
        <item>Halo halo is a creepy mixture of fruits and berries</item>
    </string-array>
    <string-array name="pastries_titles">
        <item>Crappy kochen</item>
        <item>Manresa Pastries</item>
        <item>Maxres Pastries</item>
        <item>Raspberry Pastries</item>
        <item>Crappy kochen</item>
        <item>Manresa Pastries</item>
        <item>Maxres Pastries</item>
        <item>Raspberry Pastries</item>
        <item>Crappy kochen</item>
        <item>Manresa Pastries</item>
        <item>Maxres Pastries</item>
        <item>Raspberry Pastries</item>
    </string-array>
    <string-array name="pastries_descriptions">
        <item>Good bake smeared with sugar and over pasted on the inside</item>
        <item>Curvy bread and tasty paste and a little pepper rained on top</item>
        <item>Oily bake with sour fruit paste and golden brown finish</item>
        <item>Star shaped crafting with sandwiched beef and cocktail paste</item>
        <item>Good bake smeared with sugar and over pasted on the inside</item>
        <item>Curvy bread and tasty paste and a little pepper rained on top</item>
        <item>Oily bake with sour fruit paste and golden brown finish</item>
        <item>Star shaped crafting with sandwiched beef and cocktail paste</item>
        <item>Good bake smeared with sugar and over pasted on the inside</item>
        <item>Curvy bread and tasty paste and a little pepper rained on top</item>
        <item>Oily bake with sour fruit paste and golden brown finish</item>
        <item>Star shaped crafting with sandwiched beef and cocktail paste</item>
    </string-array>
    <string-array name="pizza_titles">
        <item>Neapolitan pizza</item>
        <item>Detroit pizza</item>
        <item>St. Louis pizza</item>
        <item>Neapolitan pizza</item>
        <item>Detroit pizza</item>
        <item>St. Louis pizza</item>
        <item>Neapolitan pizza</item>
        <item>Detroit pizza</item>
        <item>St. Louis pizza</item>
    </string-array>
    <string-array name="pizza_descriptions">
        <item>The typical Neapolitan pizza toppings are fresh mozzarella, tomatoes, basil leaves, oregano, and olive oil. Since Neapolitan pizza is thin, it isn\'t designed to handle the weight of too many toppings</item>
        <item>Detroit pizza traditionally features pepperoni, brick cheese (usually Wisconsin brick cheese), and tomato sauce. Other typical toppings include mushrooms and olives</item>
        <item>St. Louis pizza features Provel cheese and a sweeter tomato sauce with a hefty dosage of oregano. Because of its firm crust, St. Louis-style pizza can support several toppings of your choice</item>
        <item>The typical Neapolitan pizza toppings are fresh mozzarella, tomatoes, basil leaves, oregano, and olive oil. Since Neapolitan pizza is thin, it isn\'t designed to handle the weight of too many toppings</item>
        <item>Detroit pizza traditionally features pepperoni, brick cheese (usually Wisconsin brick cheese), and tomato sauce. Other typical toppings include mushrooms and olives</item>
        <item>St. Louis pizza features Provel cheese and a sweeter tomato sauce with a hefty dosage of oregano. Because of its firm crust, St. Louis-style pizza can support several toppings of your choice</item>
        <item>The typical Neapolitan pizza toppings are fresh mozzarella, tomatoes, basil leaves, oregano, and olive oil. Since Neapolitan pizza is thin, it isn\'t designed to handle the weight of too many toppings</item>
        <item>Detroit pizza traditionally features pepperoni, brick cheese (usually Wisconsin brick cheese), and tomato sauce. Other typical toppings include mushrooms and olives</item>
        <item>St. Louis pizza features Provel cheese and a sweeter tomato sauce with a hefty dosage of oregano. Because of its firm crust, St. Louis-style pizza can support several toppings of your choice</item>
    </string-array>
    <string-array name="cocktails_titles">
        <item>Mai-tai</item>
        <item>Martini</item>
        <item>Mojito</item>
        <item>Mai-tai</item>
        <item>Martini</item>
        <item>Mojito</item>
        <item>Mai-tai</item>
        <item>Martini</item>
        <item>Mojito</item>
    </string-array>
    <string-array name="cocktails_descriptions">
        <item>The Mai Tai is a cocktail based on rum, Curaçao liqueur, orgeat syrup, and lime juice, associated with Polynesian-style settings</item>
        <item>Classic Gin Martini Cocktail. The archetypal gin serve, the Gin MARTINI Cocktail was an icon of the 20th century, and is more popular than ever in the 21st</item>
        <item>The mojito is one of the most famous rum-based highballs. There are several versions of the mojito</item>
        <item>The Mai Tai is a cocktail based on rum, Curaçao liqueur, orgeat syrup, and lime juice, associated with Polynesian-style settings</item>
        <item>Classic Gin Martini Cocktail. The archetypal gin serve, the Gin MARTINI Cocktail was an icon of the 20th century, and is more popular than ever in the 21st</item>
        <item>The mojito is one of the most famous rum-based highballs. There are several versions of the mojito</item>
        <item>The Mai Tai is a cocktail based on rum, Curaçao liqueur, orgeat syrup, and lime juice, associated with Polynesian-style settings</item>
        <item>Classic Gin Martini Cocktail. The archetypal gin serve, the Gin MARTINI Cocktail was an icon of the 20th century, and is more popular than ever in the 21st</item>
        <item>The mojito is one of the most famous rum-based highballs. There are several versions of the mojito</item>
    </string-array>
    <string-array name="pasta_titles">
        <item>Pasta a la carbonara</item>
        <item>Pasta with kale and mushrooms</item>
        <item>Creamy cajun linguine</item>
        <item>Pasta a la carbonara</item>
        <item>Pasta with kale and mushrooms</item>
        <item>Creamy cajun linguine</item>
        <item>Pasta a la carbonara</item>
        <item>Pasta with kale and mushrooms</item>
        <item>Creamy cajun linguine</item>
    </string-array>
    <string-array name="pasta_descriptions">
        <item>For a quick dinner, whip up Tyler Florence\'s authentic Spaghetti alla Carbonara recipe, a rich tangle of pasta, pancetta and egg, from Food Network</item>
        <item>Garlicky Mushroom + Kale with Pasta. This recipe is very flexible and can be mixed up using different broths, noodles or herbs</item>
        <item>Like this creamy cajun linguine. It’s not only easy to make, but creamy, simple pastas exhibit a simple elegance to me</item>
        <item>For a quick dinner, whip up Tyler Florence\'s authentic Spaghetti alla Carbonara recipe, a rich tangle of pasta, pancetta and egg, from Food Network</item>
        <item>Garlicky Mushroom + Kale with Pasta. This recipe is very flexible and can be mixed up using different broths, noodles or herbs</item>
        <item>Like this creamy cajun linguine. It’s not only easy to make, but creamy, simple pastas exhibit a simple elegance to me</item>
        <item>For a quick dinner, whip up Tyler Florence\'s authentic Spaghetti alla Carbonara recipe, a rich tangle of pasta, pancetta and egg, from Food Network</item>
        <item>Garlicky Mushroom + Kale with Pasta. This recipe is very flexible and can be mixed up using different broths, noodles or herbs</item>
        <item>Like this creamy cajun linguine. It’s not only easy to make, but creamy, simple pastas exhibit a simple elegance to me</item>
    </string-array>
    <string-array name="stores_names">
        <item>Catchy restaurants</item>
        <item>Goerreshof</item>
        <item>Santa Barbara</item>
        <item>Catchy restaurants</item>
        <item>Goerreshof</item>
        <item>Santa Barbara</item>
        <item>Catchy restaurants</item>
        <item>Goerreshof</item>
        <item>Santa Barbara</item>
    </string-array>
</resources>